test/spec_vectors/i32/fail/module_19.wat
(module (func $type-binary-1st-operand-empty (i32.add) (drop)))